# tidy-plugin

./: .gitignore  AwesomePrefixCheck.cpp  CMakeLists.txt  README.md  StrToPathCheck.cpp  build-and-test.sh  test.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py.in  test.cpp
